# HW20.1

./: README.md  pyproject.toml
catalog/: admin.py  models.py  urls.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py
config/: settings.py  urls.py
