[tool.poetry]
name = "hw20-1"
version = "0.1.0"
description = ""
authors = ["Pavel Novikov <pavlik.novik@yandex.ru>"]
readme = "README.md"
packages = [{include = "hw20"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
black = "^24.4.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
psycopg2 = "^2.9.9"
psycopg = "^3.2.1"
ipython = "^8.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
